--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BreachForums</title>
-    <link rel="icon" type="image/png" href="/logo.png" sizes="192x192">
+    <title>Document</title>
 </head>
+
 <body>
     <br>
     <br>
@@ -26,5 +27,5 @@
         <a href="https://web.archive.org/web/20220525120013/https://t.me/s/breachforums">https://t.me/s/breachforums</a>
     </div>
 </body>
-    
+
 </html>
