--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <br>
     <br>
     <div style="margin: auto; width: 50%;">
+        <h1>breached.co IS A SCAM</h>
         <a href="https://web.archive.org/web/20220523224633/https://breached.co/Thread-Buying-BreachForums-on-Telegram">https://breached.co/Thread-Buying-BreachForums-on-Telegram</a>
         <br>
         <a href="https://web.archive.org/web/20220525115947/https://breached.co/Thread-Beware-of-scam-telegram-channels-impersonating-us">https://breached.co/Thread-Beware-of-scam-telegram-channels-impersonating-us</a>
