--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     <br>
     <br>
-    <div style="margin: auto; width: 67%;">
+    <div style="margin: auto; width: 67%; white-space: nowrap;">
         <h1>breached.co IS A SCAM</h>
         <br>
         <br>
