--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BreachForums</title>
+    <link rel="icon" type="image/png" href="/logo.png" sizes="192x192">
 </head>
 
 <body>
@@ -13,21 +14,23 @@
     <br>
     <br>
     <br>
-    <div style="margin: auto; width: 67%; white-space: nowrap;">
+    <div style="margin: auto; width: 67%; white-space: nowrap; text-align: center">
         <h1>breached.co IS A SCAM</h>
         <br>
         <br>
-        <a href="https://web.archive.org/web/20220523224633/https://breached.co/Thread-Buying-BreachForums-on-Telegram">https://breached.co/Thread-Buying-BreachForums-on-Telegram</a>
-        <br>
-        <a href="https://web.archive.org/web/20220525115947/https://breached.co/Thread-Beware-of-scam-telegram-channels-impersonating-us">https://breached.co/Thread-Beware-of-scam-telegram-channels-impersonating-us</a>
+        <a href="https://web.archive.org/web/20220523224633/https://breached.co/Thread-Buying-BreachForums-on-Telegram">breached.co/Thread-Buying-BreachForums-on-Telegram</a>
         <br>
         <br>
-        <a href="https://web.archive.org/web/20220523225833/https://i.breached.co/gMvKd2uuv0JzWaNV.png">https://i.breached.co/gMvKd2uuv0JzWaNV.png</a>
+        <a href="https://web.archive.org/web/20220525115947/https://breached.co/Thread-Beware-of-scam-telegram-channels-impersonating-us">breached.co/Thread-Beware-of-scam-telegram-channels-impersonating-us</a>
         <br>
         <br>
-        <a href="https://web.archive.org/web/20220524144126/https://t.me/s/breachforums">https://t.me/s/breachforums</a>
+        <a href="https://web.archive.org/web/20220523225833/https://i.breached.co/gMvKd2uuv0JzWaNV.png">i.breached.co/gMvKd2uuv0JzWaNV.png</a>
         <br>
-        <a href="https://web.archive.org/web/20220525120013/https://t.me/s/breachforums">https://t.me/s/breachforums</a>
+        <br>
+        <a href="https://web.archive.org/web/20220524144126/https://t.me/s/breachforums">t.me/s/breachforums</a>
+        <br>
+        <br>
+        <a href="https://web.archive.org/web/20220525120013/https://t.me/s/breachforums">t.me/s/breachforums</a>
     </div>
 </body>
 </html>
