--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <br>
         <br>
         <a href="https://web.archive.org/web/20220525120013/https://t.me/s/breachforums">t.me/s/breachforums</a>
+        <br>
+        <a href="https://bit.ly/blackman666bot" style="color: green;"><h1>STAY SAFE & USE OUR SERVICES</h1></a>
+        OUR FORUM IS IN PRODUCTION PROCESS
     </div>
 </body>
 </html>
