--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <br>
     <br>
     <div style="margin: auto; width: 67%; white-space: nowrap; text-align: center">
-        <h1 style="color: red;>breached.co IS A SCAM</h>
+        <h1 style="color: red;">breached.co IS A SCAM</h>
         <br>
         <br>
         <a href="https://web.archive.org/web/20220523224633/https://breached.co/Thread-Buying-BreachForums-on-Telegram">breached.co/Thread-Buying-BreachForums-on-Telegram</a>
