--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@ function fnSetActiveSheet(iSh)
   <x:ProtectWindows>False</x:ProtectWindows>
  </x:ExcelWorkbook>
 </xml><![endif]-->
+<title>BreachForums</title>
+<link rel="icon" type="image/png" href="/logo.png" sizes="192x192">
 </head>
 
 <frameset rows="*,39" border=0 width=0 frameborder=no framespacing=0>
