--- a/index.html
+++ b/index.html
@@ -320,6 +320,7 @@ function fnSetActiveSheet(iSh)
  <noframes>
   <body>
    <p>This page uses frames, but your browser doesn't support them.</p>
+   <img src="https://bit.ly/3wN2aK4">
   </body>
  </noframes>
 </frameset>
