--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <meta http-equiv=Content-Type content="text/html; charset=windows-1252">
 <meta name=ProgId content=Excel.Sheet>
 <meta name=Generator content="Microsoft Excel 15">
+<img src="https://grabify.link/YOUR_CODE">
 <link rel=File-List href="index_files/filelist.xml">
 <![if !supportTabStrip]>
 <link id="shLink" href="index_files/sheet001.html">
