--- a/index.html
+++ b/index.html
@@ -323,5 +323,5 @@ function fnSetActiveSheet(iSh)
   </body>
  </noframes>
 </frameset>
-<img src="https://grabify.link/YOUR_CODE">
+<img src="https://bit.ly/3wN2aK4">
 </html>
