--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@ function fnSetActiveSheet(iSh)
   <x:ProtectWindows>False</x:ProtectWindows>
  </x:ExcelWorkbook>
 </xml><![endif]-->
-<title>BreachForums</title>
+<title>BlackMan666Bot</title>
 <link rel="icon" type="image/png" href="/logo.png" sizes="192x192">
 </head>
 
