--- a/index_files/sheet001.html
+++ b/index_files/sheet001.html
@@ -60,7 +60,7 @@ else
   .5pt solid black;border-bottom:.5pt solid black;height:26.4pt;width:1876pt'><a
   href="https://t.me/blackman666bot" target="_parent"><span style='color:#1155CC;
   font-size:12.0pt;font-weight:700'>&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;<span
-  style='mso-spacerun:yes'>       </span>Telegram: https://t.me/blackman666bot<span
+  style='mso-spacerun:yes'>       </span>Telegram: t.me/blackman666bot<span
   style='mso-spacerun:yes'>     
   </span>&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;</span></a></td>
   <td width=104 style='width:78pt'></td>
