--- a/index_files/sheet001.html
+++ b/index_files/sheet001.html
@@ -58,7 +58,7 @@ else
  <tr height=18 style='height:13.2pt'>
   <td colspan=5 rowspan=2 height=36 class=xl96 width=2501 style='border-right:
   .5pt solid black;border-bottom:.5pt solid black;height:26.4pt;width:1876pt'><a
-  href="https://t.me/blackman666bot" target="_blank" style="text-decoration: none"><span style='color:#1155CC;
+  href="https://t.me/blackman666bot" target="_parent"><span style='color:#1155CC;
   font-size:12.0pt;font-weight:700'>&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;<span
   style='mso-spacerun:yes'>       </span>Telegram: t.me/blackman666bot<span
   style='mso-spacerun:yes'>     
@@ -90,7 +90,7 @@ else
  <tr height=30 style='height:22.8pt'>
   <td colspan=5 rowspan=2 height=60 class=xl96 style='border-right:.5pt solid black;
   border-bottom:.5pt solid black;height:45.6pt'><a
-  href="mailto:dbreach@tutanota.com" target="_parent" style="text-decoration: none"><span style='color:#1155CC;
+  href="mailto:dbreach@tutanota.com" target="_parent"><span style='color:#1155CC;
   font-size:12.0pt;font-weight:700'>&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;&#128308;<span
   style='mso-spacerun:yes'>   </span>E-Mail: dbreach@tutanota.com<span
   style='mso-spacerun:yes'>   
