--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
 
 <body>
     <div>
-        <a href="https://t.me/blackman666bot" target="_blank" style="text-decoration: none"><span style="color:#1155CC;
+        <a href="https://t.me/blackman666bot" target="_blank" style="text-decoration: none"><span style="color:#ffff00;
   font-size:12.0pt;font-weight:700">🔴🔴🔴🔴<span>&nbsp;&nbsp;</span>Telegram:
                 t.me/blackman666bot<span>&nbsp;&nbsp;</span>🔴🔴🔴🔴</span></a>
                 <a href="mailto:dbreach@tutanota.com" target="_parent"
-            style="text-decoration: none"><span style="color:#1155CC;
+            style="text-decoration: none"><span style="color:#ffff00;
   font-size:12.0pt;font-weight:700">🔴🔴🔴🔴<span>&nbsp;&nbsp;</span>E-Mail:
                 dbreach@tutanota.com<span>&nbsp;&nbsp;
                 </span>🔴🔴🔴🔴</span></a>
