--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
         }
         -->
     </style>
+    <link rel="icon" type="image/png" href="/logo.png" sizes="192x192">
 </head>
 
 <body>
@@ -108,12 +109,11 @@
         <a href="https://t.me/blackman666bot" target="_blank" style="text-decoration: none"><span style="color:#ffff00;
   font-size:12.0pt;font-weight:700">🔴🔴🔴🔴<span>&nbsp;&nbsp;</span>Telegram:
                 t.me/blackman666bot<span>&nbsp;&nbsp;</span>🔴🔴🔴🔴</span></a>
-                <a href="mailto:dbreach@tutanota.com" target="_parent"
-            style="text-decoration: none"><span style="color:#ffff00;
+        <a href="mailto:dbreach@tutanota.com" target="_parent" style="text-decoration: none"><span style="color:#ffff00;
   font-size:12.0pt;font-weight:700">🔴🔴🔴🔴<span>&nbsp;&nbsp;</span>E-Mail:
                 dbreach@tutanota.com<span>&nbsp;&nbsp;
                 </span>🔴🔴🔴🔴</span></a>
-                </div>
+    </div>
     <div>
         <table width="100%" border=1 cellpadding=1 cellspacing=2 style="background-color: #ffffff;">
             <tr valign=top>
