--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         /* Normal text */
             {
             font-size: 10pt;
-            font-family: 'Courier New';
+            font-family: 'Arial';
             font-style: normal;
-            font-weight: normal;
+            font-weight: bold;
             color: #000000;
             text-decoration: none;
         }
