--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                     <p><span class=rvts1>Date of breach</span></p>
                 </td>
                 <td style="border-style: inset;">
-                    <p><span class=rvts1>Name</span></p>
+                    <p><span class=rvts1>Name of breach</span></p>
                 </td>
                 <td style="border-style: inset;">
                     <p><span class=rvts1>Compromised data</span></p>
