--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BlackMan666Bot is a database marketplace with exclusive breaches and leaks." />
     <meta name="keywords"
-        content="hacker, hacking, breach, breaches, breached, leak, leaks, leaked, database, databases, combolist, combolists, cyber, cyber security, telegram, channel, security, b2b, marketplace" />
+        content="hacker, hacking, breach, breaches, breached, leak, leaks, leaked, database, databases, combolist, combolists, cyber, cyber security, telegram, channel, security, b2b, marketplace, data, marketer, marketers" />
 
     <title>BlackMan666Bot</title>
     <style type="text/css">
