--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="BlackMan666Bot is a database marketplace with exclusive breaches and leaks." />
-  <meta name="keywords"
-    content="hacker, hacking, breach, breaches, breached, leak, leaks, leaked, database, databases, combolist, combolists, cyber, cyber security, telegram, channel, security, b2b, marketplace, data, marketer, marketers" />
-
-  <title>Data breaches market</title>
+  <meta name="description" content="Breachedb is a database marketplace. We have exclusive database breaches and leaks">
+  <meta name="robots" content="index, follow">
+  <title>BREACHEDB</title>
 
   <style>
     body {
@@ -5852,6 +5850,7 @@
     </p>
     <p>Email: <a href="mailto:dbreach@tutanota.com" target="_parent"
         style="text-decoration: none">dbreach@tutanota.com</a></p>
+    <p>Session: </p>
   </div>
 </body>
 
