--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
       color: #ffffff;
     }
   </style>
-  <link rel="icon" type="image/png" href="/logo.png" sizes="192x192">
+  <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
 </head>
 
 <body>
-  <h1>Data breaches market</h1>
+  <h1>BREACHEDB</h1>
 
   <table border="1" class="dataframe table">
     <thead>
