--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Breachedb is a database marketplace. We have exclusive database breaches and leaks">
+  <meta name="description" content="Breachera is a database marketplace with exclusive database breaches and leaks.">
   <meta name="robots" content="index, follow">
-  <title>BREACHEDB</title>
+  <title>Breachera</title>
 
   <style>
     body {
@@ -50,7 +50,7 @@
 </head>
 
 <body>
-  <h1>BREACHEDB</h1>
+  <h1>Breachera</h1>
 
   <table border="1" class="dataframe table">
     <thead>
@@ -5846,10 +5846,10 @@
 
   <div id="contact-info">
     <h2>Contact Info:</h2>
-    <p>Telegram: <a href="https://t.me/blackman666bot" target="_blank" style="text-decoration: none">blackman666bot</a>
+    <p>Telegram: <a href="https://t.me/breachera" target="_blank" style="text-decoration: none">@breachera</a>
     </p>
-    <p>Email: <a href="mailto:dbreach@tutanota.com" target="_parent"
-        style="text-decoration: none">dbreach@tutanota.com</a></p>
+    <p>Email: <a href="mailto:breachera@proton.me" target="_parent"
+        style="text-decoration: none">breachera@proton.me</a></p>
   </div>
 </body>
 
