--- a/index.html
+++ b/index.html
@@ -5850,6 +5850,8 @@
     </p>
     <p>Email: <a href="mailto:breachera@proton.me" target="_parent"
         style="text-decoration: none">breachera@proton.me</a></p>
+    <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
+    <p>Jabber/Xmpp: breachera@draugr.de</p>
   </div>
 </body>
 
