--- a/index.html
+++ b/index.html
@@ -5852,6 +5852,8 @@
         style="text-decoration: none">breachera@proton.me</a></p>
     <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
     <p>Jabber/Xmpp: breachera@draugr.de</p>
+    <p>PGP: <a href="https://pastebin.com/raw/0LJB60p1" target="_blank"
+        style="text-decoration: none">https://pastebin.com/raw/0LJB60p1</a></p>
   </div>
 </body>
 
