--- a/index.html
+++ b/index.html
@@ -5854,6 +5854,7 @@
     <p>Jabber/Xmpp: breachera@draugr.de</p>
     <p>PGP: <a href="https://pastebin.com/raw/0LJB60p1" target="_blank"
         style="text-decoration: none">https://pastebin.com/raw/0LJB60p1</a></p>
+    <p>Tor: Soon..</p>
   </div>
 </body>
 
