--- a/index.html
+++ b/index.html
@@ -5861,8 +5861,8 @@
     <h2>Contact Info:</h2>
     <p>Telegram: <a href="https://t.me/breachera" target="_blank" style="text-decoration: none">breachera</a>
     </p>
-    <p>Email: <a href="mailto:breachera@proton.me" target="_parent"
-        style="text-decoration: none">breachera@proton.me</a></p>
+    <p>Email: <a href="mailto:admin@breachera.com" target="_parent"
+        style="text-decoration: none">admin@breachera.com</a></p>
     <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
     <p>Jabber/Xmpp: breachera@draugr.de</p>
     <p>PGP: <a href="https://breachera.com/pgp.txt" target="_blank"
