--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Breachera is a database marketplace with exclusive database breaches and leaks.">
   <meta name="robots" content="index, follow">
-  <title>Breachera</title>
+  <title>Breachera - The dreamland of data breaches</title>
 
   <style>
     body {
@@ -5869,7 +5869,7 @@
         style="text-decoration: none">breachera.com/pgp.txt</a></p>
     <p>Tor: Soon..</p>
   </div>
-  <button id="scroll-down-button" onclick="scrollToBottom()">Contact</button> 
+  <button id="scroll-down-button" onclick="scrollToBottom()">Contact</button>
   <script>
     function scrollToBottom() {
       window.scrollTo({
