--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Breachera - The dreamland of data breaches</title>
 
     <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
-    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -5996,8 +5996,8 @@
         <p>Tor: Soon..</p>
     </div>
     <button id="scroll-down-button" onclick="scrollToBottom()">Contact</button>
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-    <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="script.js"></script>
 </body>
 
