--- a/index.html
+++ b/index.html
@@ -5996,7 +5996,7 @@
         <p>Tor: Soon..</p>
     </div>
     <button id="scroll-down-button" onclick="scrollToBottom()">Contact</button>
-    <script src="https://code.jquery.com/jquery-3.7.0.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="script.js"></script>
 </body>
