--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1>Breachera</h1>
+    <h1><a href="https://breachera.com">Breachera</a></h1>
 
     <table border="1" id="data-table" class="dataframe table">
         <thead>
