--- a/index.html
+++ b/index.html
@@ -5985,14 +5985,12 @@
 
     <div id="contact-info">
         <h2>Contact Info:</h2>
-        <p>Telegram: <a href="https://t.me/breachera" target="_blank" style="text-decoration: none">breachera</a>
+        <p>Telegram: <a href="https://t.me/breachera" target="_blank">breachera</a>
         </p>
-        <p>Email: <a href="mailto:admin@breachera.com" target="_parent"
-                style="text-decoration: none">admin@breachera.com</a></p>
+        <p>Email: <a href="mailto:admin@breachera.com" target="_parent">admin@breachera.com</a></p>
         <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
         <p>Jabber/Xmpp: breachera@draugr.de</p>
-        <p>PGP: <a href="https://breachera.com/pgp.txt" target="_blank"
-                style="text-decoration: none">breachera.com/pgp.txt</a></p>
+        <p>PGP: <a href="https://breachera.com/pgp.txt" target="_blank">breachera.com/pgp.txt</a></p>
         <p>Tor: Soon..</p>
     </div>
     <button id="scroll-down-button" onclick="scrollToBottom()">Contact</button>
