--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <h1><a href="https://breachera.com">Breachera</a></h1>
-    <table border="1" class="dataframe table">
+    <table border="1" id="data-table" class="dataframe table">
         <thead>
             <tr style="text-align: right;">
                 <th>#</th>
