--- a/index.html
+++ b/index.html
@@ -6786,7 +6786,7 @@
         <p>PGP: <a href="https://breachera.com/pgp.txt" target="_blank">breachera.com/pgp.txt</a></p>
         <p>Tor: Soon..</p>
     </div>
-    <button id="scroll-down-button" onclick="scrollToBottom()">Contact</button>
+    <a href="#contact-info" id="scroll-down-button">Contact</button>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="script.js"></script>
