--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1><a href="https://breachera.com">Breachera</a></h1>
+    <h1 id="top"><a href="https://breachera.com">Breachera</a></h1>
     <table border="1" id="data-table" class="dataframe table">
         <thead>
             <tr style="text-align: right;">
@@ -6786,7 +6786,10 @@
         <p>PGP: <a href="https://breachera.com/pgp.txt" target="_blank">breachera.com/pgp.txt</a></p>
         <p>Tor: Soon..</p>
     </div>
-    <a href="#contact-info" id="scroll-down-button">Contact</button>
+    <div id="bottom-right">
+        <a href="#top" class="scroll-button">↑</a>
+        <a href="#contact-info" class="scroll-button">↓</a>
+    </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script src="script.js"></script>
