--- a/index.html
+++ b/index.html
@@ -6778,7 +6778,7 @@
     </table>
     <div id="contact-info">
         <h2>Contact Info:</h2>
-        <p>Telegram: <a href="https://t.me/breachera" target="_blank">breachera</a>
+        <p>Telegram: <a href="https://t.me/breachera" target="_blank">t.me/breachera</a>
         </p>
         <p>Email: <a href="mailto:admin@breachera.com" target="_parent">admin@breachera.com</a></p>
         <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
