--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html id="top" lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 id="top"><a href="https://breachera.com">Breachera</a></h1>
+    <h1><a href="https://breachera.com">Breachera</a></h1>
     <table border="1" id="data-table" class="dataframe table">
         <thead>
             <tr style="text-align: right;">
