--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="top" lang="en">
+<html lang="en-US" id="top">
 
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,6 @@
 
     <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
-    <link rel="stylesheet"
-        href="https://cdn.datatables.net/plug-ins/1.13.7/features/searchHighlight/dataTables.searchHighlight.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -6796,7 +6794,7 @@
     </table>
     <div id="contact-info">
         <h2>Contact Info:</h2>
-        <p>Telegram: <a href="https://t.me/breachera" target="_blank">breachera</a>
+        <p>Telegram: <a href="https://t.me/breachera" target="_blank">t.me/breachera</a>
         </p>
         <p>Email: <a href="mailto:admin@breachera.com" target="_parent">admin@breachera.com</a></p>
         <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
@@ -6805,15 +6803,13 @@
         <p>Tor: Soon..</p>
     </div>
     <div id="bottom-right">
-        <a href="#top" class="scroll-button">a</a>
-        <a href="#contact-info" class="scroll-button">b</a>
+        <a href="#top" class="scroll-button">↑</a>
+        <a href="#contact-info" class="scroll-button">↓</a>
     </div>
-
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
     <script
         src="https://cdn.datatables.net/plug-ins/1.13.7/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
-    <script src="https://bartaz.github.io/sandbox.js/jquery.highlight.js"></script>
     <script src="script.js"></script>
 </body>
 
