--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="Breachera is a database marketplace with exclusive database breaches and leaks.">
     <meta name="robots" content="index, follow">
     <title>Breachera - The dreamland of data breaches</title>
