--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Breachera is a database marketplace with exclusive database breaches and leaks.">
     <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://breachera.com/">
     <title>Breachera - The dreamland of data breaches</title>
 
     <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
