--- a/index.html
+++ b/index.html
@@ -6800,7 +6800,7 @@
         <p>Email: <a href="mailto:admin@breachera.com" target="_parent">admin@breachera.com</a></p>
         <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
         <p>Jabber/Xmpp: breachera@draugr.de</p>
-        <p>PGP: <a href="https://breachera.com/pgp.txt" target="_blank">breachera.com/pgp.txt</a></p>
+        <p>PGP: <a href="https://breachera.com/pgp.asc" target="_blank">breachera.com/pgp.asc</a></p>
         <p>Tor: <a href="http://w7dllfczapwbbszjcunnqy3kzjzgjq2ng3svlqlejzjwk5lr4ndf6nad.onion/"
                 target="_blank">w7dllfczapwbbszjcunnqy3kzjzgjq2ng3svlqlejzjwk5lr4ndf6nad.onion</a></p>
     </div>
