--- a/index.html
+++ b/index.html
@@ -7800,7 +7800,7 @@
                 <td>73481539</td>
                 <td>2021</td>
                 <td>att.com</td>
-                <td>names - Email address - Physical addresses - Mobile phone numbers - Dates of birth (DOB) - Social
+                <td>Full names - Email address - Physical addresses - Mobile phone numbers - Dates of birth (DOB) - Social
                     security numbers (SSN)</td>
             </tr>
         </tbody>
