--- a/index.html
+++ b/index.html
@@ -7790,7 +7790,7 @@
                 <td>750</td>
                 <td>10880485</td>
                 <td>2023</td>
-                <td>tigo.chat</td>
+                <td>tigodating.com</td>
                 <td>Device information - Email addresses - Genders - Geographic locations - IP addresses - Names -
                     Private messages - Profile photos - Usernames</td>
             </tr>
