--- a/index.html
+++ b/index.html
@@ -8105,8 +8105,8 @@
     <p>Session: 05c72ddaf0f7c90a18171c8f725a0670ed97abd130176ee02a8382a579447a5c73</p>
     <p>Jabber/Xmpp: breachera@draugr.de</p>
     <p>PGP: <a href="https://breachera.com/pgp.asc" target="_blank">breachera.com/pgp.asc</a></p>
-    <p>Tor: <a href="http://w7dllfczapwbbszjcunnqy3kzjzgjq2ng3svlqlejzjwk5lr4ndf6nad.onion/"
-        target="_blank">w7dllfczapwbbszjcunnqy3kzjzgjq2ng3svlqlejzjwk5lr4ndf6nad.onion</a></p>
+    <!--<p>Tor: <a href="http://w7dllfczapwbbszjcunnqy3kzjzgjq2ng3svlqlejzjwk5lr4ndf6nad.onion/"
+        target="_blank">w7dllfczapwbbszjcunnqy3kzjzgjq2ng3svlqlejzjwk5lr4ndf6nad.onion</a></p>-->
   </div>
   <div id="bottom-right">
     <a href="#top" class="scroll-button">↑</a>
