--- a/index.html
+++ b/index.html
@@ -8097,7 +8097,7 @@
   </table>
   <div id="contact-info">
     <h2>Contact Info:</h2>
-    <p>Telegram: <a href="https://t.me/breachera" target="_blank">t.me/breachera</a></p>
+    <p>Telegram: <a href="https://t.me/breachera_admin" target="_blank">t.me/breachera_admin</a></p>
   </div>
   <div id="bottom-right">
     <a href="#top" class="scroll-button">↑</a>
