--- a/index.html
+++ b/index.html
@@ -8098,6 +8098,7 @@
   <div id="contact-info">
     <h2>Contact Info:</h2>
     <p>Telegram: <a href="https://t.me/breachera_admin" target="_blank">t.me/breachera_admin</a></p>
+    <p>Email: <a href="mailto:breachera_admin@proton.me" target="_parent">breachera_admin@proton.me</a></p>
   </div>
   <div id="bottom-right">
     <a href="#top" class="scroll-button">↑</a>
