--- a/index.html
+++ b/index.html
@@ -4367,7 +4367,7 @@
                 <td>BookMate Database</td>
                 <td>bookmate.com</td>
                 <td>email addresses alongside names - genders - dates of birth and passwords stored as salted SHA-512
-                    hashes.</td>
+                    hashes</td>
             </tr>
             <tr>
                 <td>467</td>
@@ -7746,12 +7746,12 @@
                 <td>700845355</td>
                 <td>2021</td>
                 <td>LinkedIn Database</td>
-                <td>linkedin</td>
+                <td>linkedin.com</td>
                 <td>Email Addresses - Full names - Phone numbers - Physical addresses - Geolocation records - LinkedIn
                     username and
                     profile URL - Personal and professional experience/background - Genders - and other social media
                     accounts and
-                    usernames.</td>
+                    usernames</td>
             </tr>
             <tr>
                 <td>825</td>
