--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Breachera - The dreamland of data breaches</title>
 
   <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
-  <link rel="stylesheet" href="jquery.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -9297,10 +9297,10 @@
     <a href="#top" class="scroll-button">↑</a>
     <a href="#contact-info" class="scroll-button">↓</a>
   </div>
-  <script src="jquery.min.js"></script>
-  <script src="jquery.dataTables.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="https://cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js"></script>
   <script
-    src="dataTables.searchHighlight.min.js"></script>
+    src="https://cdn.datatables.net/plug-ins/1.13.7/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
   <script src="script.js"></script>
 </body>
 
