--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Breachera is a database marketplace with exclusive database breaches and leaks.">
   <meta name="robots" content="index, follow">
-  <link rel="canonical" href="https://breachera.com/">
   <title>Breachera - The dreamland of data breaches</title>
 
   <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
@@ -9290,7 +9289,7 @@
   </table>
   <div id="contact-info">
     <h2>Contact Info:</h2>
-    <p>Telegram: <a href="https://t.me/breachera_admin" target="_blank">t.me/breachera_admin</a></p>
+    <p>Telegram: <a rel="nofollow" href="https://t.me/breachera_admin" target="_blank">t.me/breachera_admin</a></p>
     <p>Email: <a href="mailto:breachera_admin@proton.me" target="_parent">breachera_admin@proton.me</a></p>
   </div>
   <div id="bottom-right">
