--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <h1><a href="https://breachera.com">Breachera</a></h1>
-  <h3>BREACH - LEAK - DATABASE</h3>
+  <h1 id="seo">BREACH - LEAK - DATABASE</h1>
   <table border="1" id="data-table">
     <thead>
       <tr style="text-align: right;">
