--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Breachera - The dreamland of data breaches</title>
 
   <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
-  <link rel="stylesheet" href="https://cdn.datatables.net/2.2.2/css/jquery.dataTables.min.css">
+  <link rel="stylesheet" href="//cdn.datatables.net/2.2.2/css/dataTables.dataTables.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -9296,7 +9296,7 @@
     <a href="#contact-info" class="scroll-button">↓</a>
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <script src="https://cdn.datatables.net/2.2.2/js/jquery.dataTables.min.js"></script>
+  <script src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
   <script
     src="https://cdn.datatables.net/plug-ins/2.2.2/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
   <script src="script.js"></script>
