--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>Breachera - The dreamland of data breaches</title>
 
   <link rel="icon" type="image/png" href="logo.png" sizes="192x192">
-  <link rel="stylesheet" href="//cdn.datatables.net/2.2.2/css/dataTables.dataTables.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/2.2.2/css/dataTables.dataTables.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
