--- a/index.html
+++ b/index.html
@@ -9297,8 +9297,7 @@
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
-  <script
-    src="https://cdn.datatables.net/plug-ins/2.2.2/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
+  <script src="https://cdn.datatables.net/plug-ins/2.2.2/features/searchHighlight/dataTables.searchHighlight.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
