--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Breachera is a database marketplace with exclusive database breaches and leaks.">
+  <meta name="keywords" content="Databreach, Databreaches, DB, Database, Databases, Leak, Leaks, Dataleak, Dateleaks, Marketing, B2B, Leads, Breach, Breachs, Linkedin, Email, SSN, Emails, Phone number, KYC, ID">
   <meta name="robots" content="index, follow">
   <title>Breachera - The dreamland of data breaches</title>
 
@@ -9301,3 +9302,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
