--- a/index.html
+++ b/index.html
@@ -9285,6 +9285,15 @@
         <td>Email addresses - Genders - Marital statuses - Names - Occupations - Passwords - Phone numbers - Physical
           addresses - Religions - Spoken languages</td>
       </tr>
+      <tr>
+        <td>1008</td>
+        <td class="red">2090</td>
+        <td>1755121</td>
+        <td>2025</td>
+        <td>Nexo</td>
+        <td>nexo.com</td>
+        <td>Email addresses, Partial phone numbers, Account number</td>
+      </tr>
     </tbody>
   </table>
   <div id="contact-info">
@@ -9302,4 +9311,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
